fediz-systests-oidc: update ehcache dependencies